@@ -1,4 +1,10 @@
 ==============
+AS OF 20251218
+==============
+
+- Permit js=-2 for any stream operation.
+
+==============
 AS OF 20250930
 ==============
 
